--- a/laboate/config.py.sample
+++ b/laboate/config.py.sample
@@ -5,7 +5,8 @@ CONFIG = {
         "sda": 2,  # SDA pin (GPIO number)
         "scl": 1,  # SCL pin (GPIO number)
         "width": 128,  # Screen width
-        "height": 64  # Screen height
+        "height": 64,  # Screen height,
+        "scale": 1  # Upscale render
     },
     "wifi": {
         "ssid": "ssid",  # Wifi SSID
